--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -1,4 +1,14 @@
 /* ==============================================================
+Will's
+===============================================================*/
+.outline {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 0.25rem;
+    border-color: #ced4da;
+}
+
+/* ==============================================================
 Bootstrap tweaks
 ===============================================================*/
 
