--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,5 @@
-<div class="footer">
-    <p>This is your footer</p>
+<div class="footer row outline justify-content-center">
+
+    <button class="btn btn-primary">CONTACT ME</button>
+
 </div>
