--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col-md-3">
+    <!-- <div class="col-md-3">
         <span class="hipster img-fluid rounded"></span>
-    </div>
-    <div class="col-md-9">
+    </div> -->
+    <div class="col-md-12 text-center">
         <h1 class="display-4">WillCapoHome.component</h1>
         <p class="lead">This is your homepage</p>
 
@@ -22,9 +22,9 @@
             </div>
         </div>
 
-        <p>
+        <!-- <p>
             If you have any question on JHipster:
-        </p>
+        </p> -->
 
         <ul>
             <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener">JHipster homepage</a></li>
@@ -34,8 +34,8 @@
             <li><a href="https://twitter.com/java_hipster" target="_blank" rel="noopener">follow @java_hipster on Twitter</a></li>
         </ul>
 
-        <p>
+        <!-- <p>
             <span>If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener">GitHub</a>!
-        </p>
+        </p> -->
     </div>
 </div>
