--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,5 +1,3 @@
-<div class="footer row outline justify-content-center">
-
-    <button class="btn btn-primary">CONTACT ME</button>
-
+<div class="footer">
+    <button class="btn btn-primary btn-contact-me">CONTACT ME</button>
 </div>
