--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -7,5 +7,7 @@
         <router-outlet></router-outlet>
         <router-outlet name="popup"></router-outlet>
     </div>
-    <jhi-footer></jhi-footer>
+    <div class="card text-center" style="margin-top: 5px;">
+        <jhi-footer></jhi-footer>
+    </div>
 </div>
