Navbar html bootstrap rearrange

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -4,7 +4,7 @@
     </div> -->
     <div class="col-md-12 text-center">
         <h1 class="display-4">WillCapoHome.component</h1>
-        <p class="lead">This is your homepage</p>
+        <p class="lead">This is your homepage Full of Bootstrap Cards in a grid layout 4x2 to start</p>
 
         <div [ngSwitch]="isAuthenticated()">
             <div class="alert alert-success" *ngSwitchCase="true">
