--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -15,14 +15,20 @@
 
         <!-- Is Hamburger Menu when you collapse/minimize the window -->
         <a class="jh-navbar-toggler d-lg-none float-right" href="javascript:void(0);" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" (click)="toggleNavbar()">
+                <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
+                    <span class="navbar-title">WillcapoNavbar</span> 
+                </a>
             <fa-icon [icon]="'bars'"></fa-icon>
         </a>
 
         <!-- <a class="navbar-brand logo float-left" routerLink="/" (click)="collapseNavbar()"> -->
-        <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
-            <span class="navbar-title">WillcapoNavbar</span> 
-        </a>
 
+
+        <div class="navbar-collapse justify-content-center" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed" [ngSwitch]="isAuthenticated()">
+
+                <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
+                    <span class="navbar-title">WillcapoNavbar</span> 
+                </a>
         <div class="navbar-nav">
             <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
@@ -34,7 +40,9 @@
             </li>
         </div>
 
-    
+        </div>
+
+        
     <!-- <div class="navbar-collapse collapse" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed" [ngSwitch]="isAuthenticated()">
         <ul class="navbar-nav ml-auto">
             <li *ngSwitchCase="true" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
