--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -6,171 +6,179 @@
 
 
 <div class="navbar navbar-dark navbar-expand-md jh-navbar">
-
-    <div class="container-fluid justify-content-center">
-
-
-    <!-- <div class="jh-logo-container float-left"> -->
-    <!-- div jh-logo-center width:100%, prob remove this. * try removing all the Admin stuff then apply justify-content-between-->
-
-        <!-- Is Hamburger Menu when you collapse/minimize the window -->
-        <a class="jh-navbar-toggler d-lg-none float-right" href="javascript:void(0);" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" (click)="toggleNavbar()">
-                <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
-                    <span class="navbar-title">WillcapoNavbar</span> 
-                </a>
-            <fa-icon [icon]="'bars'"></fa-icon>
-        </a>
-
-        <!-- <a class="navbar-brand logo float-left" routerLink="/" (click)="collapseNavbar()"> -->
-
-
-        <div class="navbar-collapse justify-content-center" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed" [ngSwitch]="isAuthenticated()">
-
-            <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
-                <span class="navbar-title">WillcapoNavbar</span> 
-            </a>
-            <div class="navbar-nav">
-                <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                    <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
-                        <span>
-                            <fa-icon [icon]="'home'"></fa-icon>
-                            <span>Home</span>
-                        </span>
-                    </a>
-                </li>
-            </div>
-
-        </div>
-
-        
     
-        <!-- <li *ngSwitchCase="true" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="entity-menu">
-                <span>
-                    <fa-icon [icon]="'th-list'"></fa-icon>
-                    <span>
-                        Entities
-                    </span>
-                </span>
+    <!-- Is Hamburger Menu when you collapse/minimize the window -->
+    <a class="jh-navbar-toggler d-lg-none float-right" href="javascript:void(0);" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" (click)="toggleNavbar()">
+            <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
+                <span class="navbar-title">WC</span> 
             </a>
-            <ul class="dropdown-menu" ngbDropdownMenu>
-                <li>
-                    <a class="dropdown-item" routerLink="card" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
-                        <span>Card</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" routerLink="tag" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
-                        <span>Tag</span>
-                    </a>
-                </li>
-            </ul>
-        </li>
-        <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="admin-menu">
-                <span>
-                    <fa-icon [icon]="'user-plus'"></fa-icon>
-                    <span>Administration</span>
-                </span>
-            </a>
-            <ul class="dropdown-menu" ngbDropdownMenu>
-                <li>
-                    <a class="dropdown-item" routerLink="admin/user-management" routerLinkActive="active" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'user'" [fixedWidth]="true"></fa-icon>
-                        <span>User management</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" routerLink="admin/jhi-metrics" routerLinkActive="active" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'tachometer-alt'" [fixedWidth]="true"></fa-icon>
-                        <span>Metrics</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" routerLink="admin/jhi-health" routerLinkActive="active" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'heart'" [fixedWidth]="true"></fa-icon>
-                        <span>Health</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" routerLink="admin/jhi-configuration" routerLinkActive="active" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'list'" [fixedWidth]="true"></fa-icon>
-                        <span>Configuration</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" routerLink="admin/audits" routerLinkActive="active" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'bell'" [fixedWidth]="true"></fa-icon>
-                        <span>Audits</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" routerLink="admin/logs" routerLinkActive="active" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'tasks'" [fixedWidth]="true"></fa-icon>
-                        <span>Logs</span>
-                    </a>
-                </li>
-                <li *ngIf="swaggerEnabled">
-                    <a class="dropdown-item" routerLink="admin/docs" routerLinkActive="active" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'book'" [fixedWidth]="true"></fa-icon>
-                        <span>API</span>
-                    </a>
-                </li>
-                <li *ngIf="!inProduction">
-                    <a class="dropdown-item" href='./h2-console' target="_tab" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'hdd'" [fixedWidth]="true"></fa-icon>
-                        <span>Database</span>
-                    </a>
-                </li>
-            </ul>
-        </li>
-        <li ngbDropdown class="nav-item dropdown pointer" placement="bottom-right" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="account-menu">
-                <span *ngIf="!getImageUrl()">
-                <fa-icon [icon]="'user'"></fa-icon>
-                <span>
-                    Ignore
-                </span>
-                </span>
-                <span *ngIf="getImageUrl()">
-                    <img [src]="getImageUrl()" class="profile-image img-circle" alt="Avatar">
-                </span>
-            </a>
-            <ul class="dropdown-menu" ngbDropdownMenu>
-                <li *ngSwitchCase="true">
-                    <a class="dropdown-item" routerLink="settings" routerLinkActive="active" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'wrench'" [fixedWidth]="true"></fa-icon>
-                        <span>Settings</span>
-                    </a>
-                </li>
-                <li *ngSwitchCase="true">
-                    <a class="dropdown-item" routerLink="password" routerLinkActive="active" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'clock'" [fixedWidth]="true"></fa-icon>
-                        <span>Password</span>
-                    </a>
-                </li>
-                <li *ngSwitchCase="true">
-                    <a class="dropdown-item" (click)="logout()" id="logout">
-                        <fa-icon [icon]="'sign-out-alt'" [fixedWidth]="true"></fa-icon>
-                        <span>Sign out</span>
-                    </a>
-                </li>
-                <li *ngSwitchCase="false">
-                    <a class="dropdown-item" (click)="login()" id="login">
-                        <fa-icon [icon]="'sign-in-alt'" [fixedWidth]="true"></fa-icon>
-                        <span>Sign in</span>
-                    </a>
-                </li>
-                <li *ngSwitchCase="false">
-                    <a class="dropdown-item" routerLink="register" routerLinkActive="active" (click)="collapseNavbar()">
-                        <fa-icon [icon]="'user-plus'" [fixedWidth]="true"></fa-icon>
-                        <span>Register</span>
-                    </a>
-                </li>
-            </ul>
-        </li> -->
+        <fa-icon [icon]="'bars'"></fa-icon>
+    </a>
 
-    </div>
+    <div class="navbar-collapse justify-content-center" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed" [ngSwitch]="isAuthenticated()">
+
+        <div class="navbar-nav">
+
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
+                    <span>
+                        <!-- <fa-icon [icon]="'home'"></fa-icon> -->
+                        <span>Resume</span>
+                    </span>
+                </a>
+            </li>
+
+            <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> -->
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
+                    <span>
+                        <!-- <fa-icon [icon]="'home'"></fa-icon> -->
+                        <span>FHIR</span>
+                    </span>
+                </a>
+            </li>
+            
+            <li>
+                <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()" style="margin-right:0px;">
+                    <span class="navbar-title">WILL CAPO</span> 
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
+                    <span class="navbar-title">Blockchain</span> 
+                </a>
+            </li>
+
+            <li *ngSwitchCase="true" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="entity-menu">
+                    <span>
+                        <fa-icon [icon]="'th-list'"></fa-icon>
+                        <span>
+                            Entities
+                        </span>
+                    </span>
+                </a>
+                <ul class="dropdown-menu" ngbDropdownMenu>
+                    <li>
+                        <a class="dropdown-item" routerLink="card" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span>Card</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="tag" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span>Tag</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="admin-menu">
+                    <span>
+                        <fa-icon [icon]="'user-plus'"></fa-icon>
+                        <span>Administration</span>
+                    </span>
+                </a>
+                <ul class="dropdown-menu" ngbDropdownMenu>
+                    <li>
+                        <a class="dropdown-item" routerLink="admin/user-management" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'user'" [fixedWidth]="true"></fa-icon>
+                            <span>User management</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="admin/jhi-metrics" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'tachometer-alt'" [fixedWidth]="true"></fa-icon>
+                            <span>Metrics</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="admin/jhi-health" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'heart'" [fixedWidth]="true"></fa-icon>
+                            <span>Health</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="admin/jhi-configuration" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'list'" [fixedWidth]="true"></fa-icon>
+                            <span>Configuration</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="admin/audits" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'bell'" [fixedWidth]="true"></fa-icon>
+                            <span>Audits</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="admin/logs" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'tasks'" [fixedWidth]="true"></fa-icon>
+                            <span>Logs</span>
+                        </a>
+                    </li>
+                    <li *ngIf="swaggerEnabled">
+                        <a class="dropdown-item" routerLink="admin/docs" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'book'" [fixedWidth]="true"></fa-icon>
+                            <span>API</span>
+                        </a>
+                    </li>
+                    <li *ngIf="!inProduction">
+                        <a class="dropdown-item" href='./h2-console' target="_tab" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'hdd'" [fixedWidth]="true"></fa-icon>
+                            <span>Database</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li ngbDropdown class="nav-item dropdown pointer" placement="bottom-right" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="account-menu">
+                    <!-- <span *ngIf="!getImageUrl()">
+                        <fa-icon [icon]="'user'"></fa-icon>
+                    <span> -->
+                        Ignore
+                    </span>
+                    </span>
+                    <span *ngIf="getImageUrl()">
+                        <img [src]="getImageUrl()" class="profile-image img-circle" alt="Avatar">
+                    </span>
+                </a>
+                <ul class="dropdown-menu" ngbDropdownMenu>
+                    <li *ngSwitchCase="true">
+                        <a class="dropdown-item" routerLink="settings" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'wrench'" [fixedWidth]="true"></fa-icon>
+                            <span>Settings</span>
+                        </a>
+                    </li>
+                    <li *ngSwitchCase="true">
+                        <a class="dropdown-item" routerLink="password" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'clock'" [fixedWidth]="true"></fa-icon>
+                            <span>Password</span>
+                        </a>
+                    </li>
+                    <li *ngSwitchCase="true">
+                        <a class="dropdown-item" (click)="logout()" id="logout">
+                            <fa-icon [icon]="'sign-out-alt'" [fixedWidth]="true"></fa-icon>
+                            <span>Sign out</span>
+                        </a>
+                    </li>
+                    <li *ngSwitchCase="false">
+                        <a class="dropdown-item" (click)="login()" id="login">
+                            <fa-icon [icon]="'sign-in-alt'" [fixedWidth]="true"></fa-icon>
+                            <span>Sign in</span>
+                        </a>
+                    </li>
+                    <li *ngSwitchCase="false">
+                        <a class="dropdown-item" routerLink="register" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'user-plus'" [fixedWidth]="true"></fa-icon>
+                            <span>Register</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </div>
+    
+    </div>    
 </div>
+    
