--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -8,7 +8,7 @@ Navbar
 
 .jh-navbar {
     background-color: #353d47;
-    padding: 0.2em 1em;
+    /* padding: 0.2em 1em; */
 }
 
 .jh-navbar .profile-image {
