--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -19,7 +19,7 @@
 
         <div class="navbar-nav">
 
-            <li class="nav-item">
+            <li class="nav-item divider-vertical">
                 <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
                     <span>
                         <!-- <fa-icon [icon]="'home'"></fa-icon> -->
@@ -28,8 +28,8 @@
                 </a>
             </li>
 
-            <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> -->
-            <li class="nav-item">
+            <!-- <li class="nav-item divider-vertical" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> -->
+            <li class="nav-item divider-vertical">
                 <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
                     <span>
                         <!-- <fa-icon [icon]="'home'"></fa-icon> -->
@@ -44,13 +44,13 @@
                 </a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item divider-vertical">
                 <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
                     <span class="navbar-title">Blockchain</span> 
                 </a>
             </li>
 
-            <li *ngSwitchCase="true" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <li *ngSwitchCase="true" ngbDropdown class="nav-item divider-vertical dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="entity-menu">
                     <span>
                         <fa-icon [icon]="'th-list'"></fa-icon>
@@ -74,7 +74,7 @@
                     </li>
                 </ul>
             </li>
-            <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item divider-vertical dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="admin-menu">
                     <span>
                         <fa-icon [icon]="'user-plus'"></fa-icon>
@@ -132,7 +132,7 @@
                     </li>
                 </ul>
             </li>
-            <li ngbDropdown class="nav-item dropdown pointer" placement="bottom-right" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <li ngbDropdown class="nav-item divider-vertical dropdown pointer" placement="bottom-right" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="account-menu">
                     <!-- <span *ngIf="!getImageUrl()">
                         <fa-icon [icon]="'user'"></fa-icon>
