--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -239,3 +239,20 @@ ui bootstrap tweaks
 }
 
 /* jhipster-needle-css-add-main JHipster will add new css style */
+
+.divider-vertical {
+    height: 50px;
+    width: 200px;
+    margin: auto;
+    /* border-left: 1px solid black; */
+    /* border-right: 1px solid red; */
+    text-align: center;
+}
+
+/* nav ul {
+    list-style: none;
+    margin: 0 2px;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+} */
