test dev branch

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -40,7 +40,7 @@
             
             <li>
                 <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()" style="margin-right:0px;">
-                    <span class="navbar-title">WILL CAPO</span> 
+                    <span class="navbar-title">WILL CAPO930dev</span>
                 </a>
             </li>
 
@@ -181,4 +181,3 @@
     
     </div>    
 </div>
-    
